projects/rylogic/Rylogic.View3d/src/Gfx/View3d.cs


		// Objects
		[DllImport(Dll)]
		private static extern Guid View3D_ObjectContextIdGet(HObject obj);
		[DllImport(Dll, CharSet = CharSet.Unicode)]
		private static extern HObject View3D_ObjectCreateLdr([MarshalAs(UnmanagedType.LPWStr)] string ldr_script, bool file, ref Guid context_id, ref View3DIncludes includes);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern HObject View3D_ObjectCreateP3DFile([MarshalAs(UnmanagedType.LPStr)] string name, uint colour, [MarshalAs(UnmanagedType.LPWStr)] string p3d_filepath, ref Guid context_id);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern HObject View3D_ObjectCreateP3DStream([MarshalAs(UnmanagedType.LPStr)] string name, uint colour, int size, IntPtr p3d_data, ref Guid context_id);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern HObject View3D_ObjectCreate([MarshalAs(UnmanagedType.LPStr)] string name, uint colour, int vcount, int icount, int ncount, IntPtr verts, IntPtr indices, IntPtr nuggets, ref Guid context_id);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern HObject View3D_ObjectCreateEditCB([MarshalAs(UnmanagedType.LPStr)] string name, uint colour, int vcount, int icount, int ncount, EditObjectCB edit_cb, IntPtr ctx, ref Guid context_id);
		[DllImport(Dll)]
		private static extern HObject View3D_ObjectCreateInstance(HObject obj);
		[DllImport(Dll)]
		private static extern void View3D_ObjectUpdate(HObject obj, [MarshalAs(UnmanagedType.LPWStr)] string ldr_script, EUpdateObject flags);
		[DllImport(Dll)]
		private static extern void View3D_ObjectEdit(HObject obj, EditObjectCB edit_cb, IntPtr ctx);
		[DllImport(Dll)]
		private static extern void View3D_ObjectDelete(HObject obj);
		[DllImport(Dll)]
		private static extern HObject View3D_ObjectGetRoot(HObject obj);
		[DllImport(Dll)]
		private static extern HObject View3D_ObjectGetParent(HObject obj);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern HObject View3D_ObjectGetChildByName(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string name);
		[DllImport(Dll)]
		private static extern HObject View3D_ObjectGetChildByIndex(HObject obj, int index);
		[DllImport(Dll)]
		private static extern int View3D_ObjectChildCount(HObject obj);
		[DllImport(Dll)]
		private static extern void View3D_ObjectEnumChildren(HObject obj, EnumObjectsCB enum_objects_cb, IntPtr ctx);
		[DllImport(Dll, CharSet = CharSet.Unicode)]
		[return: MarshalAs(UnmanagedType.BStr)]
		private static extern string View3D_ObjectNameGetBStr(HObject obj);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectNameSet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string name);
		[DllImport(Dll, CharSet = CharSet.Unicode)]
		[return: MarshalAs(UnmanagedType.BStr)]
		private static extern string View3D_ObjectTypeGetBStr(HObject obj);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern m4x4 View3D_ObjectO2WGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectO2WSet(HObject obj, ref m4x4 o2w, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern m4x4 View3D_ObjectO2PGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectO2PSet(HObject obj, ref m4x4 o2p, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern bool View3D_ObjectVisibilityGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectVisibilitySet(HObject obj, bool visible, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern EFlags View3D_ObjectFlagsGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectFlagsSet(HObject obj, EFlags flags, bool state, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern ESortGroup View3D_ObjectSortGroupGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectSortGroupSet(HObject obj, ESortGroup group, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern ENuggetFlag View3D_ObjectNuggetFlagsGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name, int index);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectNuggetFlagsSet(HObject obj, ENuggetFlag flags, bool state, [MarshalAs(UnmanagedType.LPStr)] string? name, int index);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern Colour32 View3D_ObjectNuggetTintGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name, int index);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectNuggetTintSet(HObject obj, Colour32 colour, [MarshalAs(UnmanagedType.LPStr)] string? name, int index);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern uint View3D_ObjectColourGet(HObject obj, bool base_colour, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectColourSet(HObject obj, uint colour, uint mask, [MarshalAs(UnmanagedType.LPStr)] string? name, EColourOp op, float op_value);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern float View3D_ObjectReflectivityGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectReflectivitySet(HObject obj, float reflectivity, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern bool View3D_ObjectWireframeGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectWireframeSet(HObject obj, bool wireframe, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern bool View3D_ObjectNormalsGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectNormalsSet(HObject obj, bool show, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectResetColour(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)]
		private static extern void View3D_ObjectSetTexture(HObject obj, HTexture tex, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll)]
		private static extern BBox View3D_ObjectBBoxMS(HObject obj, bool include_children);

		// Materials
		[DllImport(Dll)]
		private static extern HTexture View3D_TextureFromStock(EStockTexture tex);
		[DllImport(Dll)]
		private static extern HTexture View3D_TextureCreate(uint width, uint height, IntPtr data, uint data_size, ref TextureOptions.InteropData options);
		[DllImport(Dll)]
		private static extern HTexture View3D_TextureCreateFromUri([MarshalAs(UnmanagedType.LPWStr)] string resource, uint width, uint height, ref TextureOptions.InteropData options);
		[DllImport(Dll)]
		private static extern HCubeMap View3D_CubeMapCreateFromUri([MarshalAs(UnmanagedType.LPWStr)] string resource, uint width, uint height, ref TextureOptions.InteropData options);
		[DllImport(Dll)]
		private static extern void View3D_TextureLoadSurface(HTexture tex, int level, [MarshalAs(UnmanagedType.LPWStr)] string tex_filepath, Rectangle[]? dst_rect, Rectangle[]? src_rect, EFilter filter, uint colour_key);
		[DllImport(Dll)]
		private static extern void View3D_TextureRelease(HTexture tex);
		[DllImport(Dll)]
		private static extern void View3D_TextureGetInfo(HTexture tex, out ImageInfo info);
		[DllImport(Dll)]
		private static extern EResult View3D_TextureGetInfoFromFile([MarshalAs(UnmanagedType.LPWStr)] string tex_filepath, out ImageInfo info);
		[DllImport(Dll)]
		private static extern void View3D_TextureSetFilterAndAddrMode(HTexture tex, EFilter filter, EAddrMode addrU, EAddrMode addrV);
		[DllImport(Dll)]
		private static extern IntPtr View3D_TextureGetDC(HTexture tex, bool discard);
		[DllImport(Dll)]
		private static extern void View3D_TextureReleaseDC(HTexture tex);
		[DllImport(Dll)]
		private static extern void View3D_TextureResize(HTexture tex, uint width, uint height, bool all_instances, bool preserve);
		[DllImport(Dll)]
		private static extern void View3d_TexturePrivateDataGet(HTexture tex, Guid guid, ref uint size, IntPtr data);
		[DllImport(Dll)]
		private static extern void View3d_TexturePrivateDataSet(HTexture tex, Guid guid, uint size, IntPtr data);
		[DllImport(Dll)]
		private static extern void View3d_TexturePrivateDataIFSet(HTexture tex, Guid guid, IntPtr pointer);
		[DllImport(Dll)]
		private static extern ulong View3D_TextureRefCount(HTexture tex);
		[DllImport(Dll)]
		private static extern HTexture View3D_TextureRenderTarget(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_TextureResolveAA(HTexture dst, HTexture src);
		[DllImport(Dll)]
		private static extern HTexture View3D_TextureFromShared(IntPtr shared_resource, ref TextureOptions.InteropData options);
		[DllImport(Dll)]
		private static extern HTexture View3D_CreateDx9RenderTarget(HWND hwnd, uint width, uint height, ref TextureOptions.InteropData options, out IntPtr shared_handle);

		// Rendering
		[DllImport(Dll)]
		private static extern void View3D_Invalidate(HWindow window, bool erase);
		[DllImport(Dll)]
		private static extern void View3D_InvalidateRect(HWindow window, ref Win32.RECT rect, bool erase);
		[DllImport(Dll)]
		private static extern void View3D_Render(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_Present(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_Validate(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_RenderTargetRestore(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_RenderTargetSet(HWindow window, HTexture render_target, HTexture depth_buffer, bool is_new_main_rt);
		[DllImport(Dll)]
		private static extern void View3D_BackBufferSizeGet(HWindow window, out int width, out int height);
		[DllImport(Dll)]
		private static extern void View3D_BackBufferSizeSet(HWindow window, int width, int height);
		[DllImport(Dll)]
		private static extern Viewport View3D_Viewport(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_SetViewport(HWindow window, Viewport vp);
		[DllImport(Dll)]
		private static extern EFillMode View3D_FillModeGet(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_FillModeSet(HWindow window, EFillMode mode);
		[DllImport(Dll)]
		private static extern ECullMode View3D_CullModeGet(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_CullModeSet(HWindow window, ECullMode mode);
		[DllImport(Dll)]
		private static extern uint View3D_BackgroundColourGet(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_BackgroundColourSet(HWindow window, uint aarrggbb);
		[DllImport(Dll)]
		private static extern int View3D_MultiSamplingGet(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_MultiSamplingSet(HWindow window, int multisampling);
